--- a/frontend/src/app/modules/access/pages/acces-page/acces-page.component.html
+++ b/frontend/src/app/modules/access/pages/acces-page/acces-page.component.html
@@ -1,4 +1,12 @@
-
+<div *ngIf="showRecibModal" >
+    <app-recibe-access />
+</div>
+<div *ngIf="showDismissModal" >
+    <app-dismiss-access />
+</div>
+<div *ngIf="showResidentReportModal" >
+    <app-generate-cut-residential-modal />
+</div>
 <div class="text-gray-900 bg-gray-200" >
     <div class="flex justify-between items-center px-4 py-2">
         <h1 class="text-3xl">Accesos</h1>
@@ -13,12 +21,34 @@
         <option value="incomplete">Incompletas</option> 
         <option value="complete">Completas de hoy</option> 
         </select>
+        <div class="p-2">
+            <button type="button"
+            class="text-sm bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline m-4"
+          
+          (click)="showRecibAccessModal()"  >
+            Comienza Mes
+        </button>
         <button type="button"
             class="text-sm bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-           >
-            Agregar
+            (click)="showReportModal()"
+            >
+            Pago Residentes
         </button>
-        
+        </div>
+        <div class="p-2">
+            <button type="button"
+            class="text-sm bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline m-4"
+          
+          (click)="showRecibAccessModal()"  >
+            Recibir
+        </button>
+        <button type="button"
+            class="text-sm bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            (click)="showDismissAccessModal()"
+            >
+            Despedir
+        </button>
+        </div>
         
     </div>
     <div *ngIf='!showIncompleteAccess'>
