--- a/frontend/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -16,6 +16,6 @@
         
       </div>
       <div>
-        <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Download</a>
+        <a (click)="logout()" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Cerrar Sesion</a>
       </div>
     </div>
