--- a/frontend/src/app/modules/vehicle-types/modals/add-vehicle-type/add-vehicle-type.component.html
+++ b/frontend/src/app/modules/vehicle-types/modals/add-vehicle-type/add-vehicle-type.component.html
@@ -32,7 +32,7 @@
         <input
           type="text"
           name=""
-          placeholder="Escribe la Placa..."
+          placeholder="Escribe el Tipo de Vehiculo"
           class="p-5 mb-5 bg-white border border-gray-200 rounded shadow-sm h-10"
           id=""
          formControlName="vehicle_type"
@@ -41,9 +41,9 @@
           <div class="w-full sm:w-full">
             <p class="mb-2 font-semibold text-gray-700">Precio por Minuto</p>
             <input
-            type="text"
+            type="number"
             name=""
-            placeholder="Escribe la Placa..."
+            placeholder="Escribe el precio por minutp..."
             class="p-5 mb-5 bg-white border border-gray-200 rounded shadow-sm h-10"
             id=""
            formControlName="price_per_minute"
