--- a/frontend/src/app/modules/access/components/complete-access/complete-access.component.html
+++ b/frontend/src/app/modules/access/components/complete-access/complete-access.component.html
@@ -2,7 +2,7 @@
 
 <div class="text-gray-900 bg-gray-200" >
     <div class="flex justify-between items-center px-4 py-2">
-        <h1 class="text-xl">Accesos Completados</h1>
+        <h1 class="text-xl">Estancias Completadas</h1>
       
         
     </div>
