--- a/frontend/src/app/modules/access/pages/acces-page/acces-page.component.html
+++ b/frontend/src/app/modules/access/pages/acces-page/acces-page.component.html
@@ -9,7 +9,7 @@
 </div>
 <div class="text-gray-900 bg-gray-200" >
     <div class="flex justify-between items-center px-4 py-2">
-        <h1 class="text-3xl">Accesos</h1>
+        <h1 class="text-3xl">Estancias</h1>
         <select
         type="text"
         name=""
